UI content update

--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Data Validation</title>
+  <title>Data Assurance</title>
   <base href="./">
   <meta http-equiv="expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,7 +58,7 @@
         </h1>
 
         <p>
-          Your Endeavour Health application is loading!
+          The Data Assurance tool is loading!
         </p>
 
       </div>
