--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Data Assurance</title>
+  <title>UPRN Matching Module</title>
   <base href="./">
   <meta http-equiv="expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,7 +58,7 @@
       <div class="messaging">
 
         <h1>
-          <i class="fa fa-spinner fa-spin"></i> Data Assurance is loading
+          <i class="fa fa-spinner fa-spin"></i> UPRN match is loading
         </h1>
 
       </div>
